--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ composer.phar
 phpunit.phar
 # local phpunit config
 /phpunit.xml
+
+#db connection
+config/db.php
+#api connection
+config/api-connect.php
